--- a/style.css
+++ b/style.css
@@ -1,26 +1,155 @@
-#grisfonce{
-    background-color: #484848 !important;
+@font-face {
+	font-family: "Aniron";
+    src: local('Aniron_font/anicm__.ttf') format("truetype");
+    
 }
-.navbar .navbar-nav .nav-item .liengris, .navbar.navbar-expand-lg .navbar-brand.liengris, footer.row.justify-content-around p.col-3 .liengris{
-    color:#C8C8C8;
+@font-face {
+	font-family: "Aniron_b";
+	src: local('Aniron_font/anicb___.ttf') format("truetype");
 }
-header .navbar.navbar-expand-lg .navbar-toggler{
-    border-color: #C8C8C8;
+@font-face {
+	font-family: "PartyB";
+    src: url('partybusiness.ttf') format("truetype");
 }
-header .navbar.navbar-expand-lg .navbar-toggler.navbar-toggler-icon{
-    color: #606060;
+@font-face {
+    font-family: "tengwari";
+    src: url(Tengwar_Annatar/tngani.ttf) format("truetype");
 }
-.nav-pills .nav-item .liengris{
-    color: #888888;
-    margin: 10px;
-}
-.nav-pills .nav-item .active{
-    color: #C8C8C8;
-    background-color:#606060;
+@font-face {
+    font-family: "tengwar";
+    src: url(Tengwar_Annatar/tngan.ttf) format("truetype");
 }
 
+.symboleelfe{
+    color: #FF6600;
+    font-family: "tengwari";
+    font-weight: 100;
+    font-size: 25px;
+    vertical-align: top;
+}
+.symboleoblique{
+    font-style: oblique -20deg
+}
+.symboleelfe2{
+    font-family: "tengwar";
+    font-weight: 100;
+    font-size: 25px;
+    color: rgba(0, 0, 0, 0.0);
+}
+.enbas{
+    vertical-align: bottom;
+}
+
+#fontclair {
+    background-image: url(integration_maquette_finale/bg_light.png);
+    padding-bottom: 50px;
+    padding-top: 20px;
+    border: 2px solid rgb(192, 192, 192);
+}
+.card-img{
+    padding: 0;
+    margin : 0px;
+    border-radius: 0;
+    width: 330px;
+    background-image: url(integration_maquette_finale/bg_dark.png)
+}
+.policepb{
+    font-family: "PartyB";
+}
+.policeaniron{
+    font-family: "Aniron"
+}
+.gras{
+    font-weight: bold;
+}
+.gros{
+    font-size: 72px;
+    text-shadow: 1px 1px 2px white;
+}
+.moins-gros{
+    font-size: 40px;
+    text-shadow: 1px 1px 2px white;
+}
+.carousel-caption {
+    position: absolute;
+    bottom: 100px;
+    right: 15%;
+    left: 15%;
+    z-index: 10;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #fff;
+    text-align: left;
+}
+.dark_vador{
+    text-shadow: 1px 1px 2px black;
+}
+.carousel-caption .VDM,
+.carousel-caption .JOKER{
+    color : black;
+}
+@media (min-width: 1200px){
+    .carousel-caption .gros.JOKER{
+    font-size: 60px;
+}
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon{
+    height: 100px;
+    width: 50px;
+}
+
+#grisfonce{
+    background-color: #FF6600 !important;
+}
+.navbar .navbar-nav .nav-item .liengris,
+.navbar.navbar-expand-lg .navbar-brand.liengris,
+footer.row.justify-content-around p.col-3 .liengris, .separateur{
+    color:white;
+    font-family: "Aniron";
+    font-weight: bold;
+    font-size: 16px;
+}
+.navbar .navbar-nav .nav-item .liengris:hover{
+    border-bottom: white 3px solid;
+}
+.separateur{
+    padding: 8px;
+}
+@media (max-width: 992px){
+    .separateur{
+        display: none;
+    }
+}
+header .navbar.navbar-expand-lg .navbar-toggler{
+    border-color: white;
+}
+header .navbar.navbar-expand-lg .navbar-toggler.navbar-toggler-icon{
+    color: white;
+}
+.nav-tabs .nav-item .liengris{
+    color: #888888;
+    margin: 10px;
+    background-color: rgba(117, 190, 218, 0.0); 
+    border : none;
+}
+.row .nav-tabs .nav-link.active span{
+    color: #FF6600;
+}
+.row .nav-tabs .nav-link.active{
+    border-bottom: 5px solid #FF6600;
+}
+.row .nav-tabs .nav-link{
+    padding : 0 ;
+}
+
+#fellows{
+    font-size: 24px;
+    margin: 20px;
+}
 #petit{
-    font-size: 20px;
+    font-size: 16px;
 }
 #droite{
     text-align: right;
@@ -81,38 +210,158 @@ footer li {
 }
 .row .card .card-img-top{
     position: relative;
-    opacity : 0.8;
+    opacity : 0.5;
+    border-radius: 0;
+    padding: 0;
+    
 }
+.card .contenu-img{
+    margin: 5px;
+    background-color: grey;
+}
+.contenu-img-dead{
+    margin: 5px;
+    background-color: rgb(56, 56, 56);
+}
+.card-body-img{
+    color: rgb(187, 187, 187);
+    font-size: 32px;
+    padding: 10px;
+}
+.card-body .card-title-img{
+    font-size: 60px;
+    color: white;
+    position : absolute;
+    top : 190px;
+    left : 80px;
+}
+.card-body .title-dead{
+    left: 120px;
+    text-decoration: line-through rgba(255, 102, 0, 0.596); 
+}
+
+
 .row .card .reward{
     position: absolute;
-    background-color: rgba(150, 150, 150, 0.9);
-    color:white;
+    background-color: rgba(255, 255, 255, 0.8);
+    color:black;
     border-radius: 5px;
-    font-size: 20px;
-    left : 12%;
-    top : 5%;
+    font-size: 35px;
+    left : 30px;
+    top : 20px;
+    right : 30px;
     text-align : center;
-    padding : 5px 10px;
+    box-shadow: 0 0px 5px 5px rgba(255, 255, 255, 0.8);
+}
+.orange{
+    color: #FF6600
 }
 .row .card .dead{
     position:absolute;
-    font-size: 50px;
-    border-radius: 10px;
-    left : 30%;
-    top : 20%;
-    background-color: rgba(150, 150, 150, 0.9);
-
+    font-size: 60px;
+    left : 100px;
+    top : 20px;
+    background-color: rgba(150, 150, 150, 0);
+    color : #FF6600;  
+    opacity: 0.9; 
+}
+.row .card .img-dead{
+    opacity: 0.3;
 }
 .row .card .card-img-top:hover{
     opacity: 1;
 }
 .row .card .img-dead:hover{
-    opacity: .1;
+    opacity: .3;
 }
-.row .card .card-img-top:hover + .reward{
+.contenu-img-dead:hover{
+    background: black;
+}
+.row .card:hover .card-title{
     font-size: 40px;
-    left : 10%;
-    top : 5%;
-    height: 50%;
-    width: 80%;
+    top : 300px;
+    left :100px;
+    color: black;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0px 5px 5px rgba(255, 255, 255, 0.8);
+}
+.row .card:hover .title-dead{
+    font-size: 40px;
+    top : 300px;
+    left :120px;
+}
+
+.card:hover .dead{
+    font-size: 90px;
+    top:100px;
+    left:80px;
+
+}
+.row .card:hover .reward{
+    display: none;
+}
+
+@media (max-width: 404px) { 
+    .row .card:hover .card-title{
+        font-size: 35px;
+        top: 260px;
+        left : 30%;
+        color: black;
+        background-color: rgba(255, 255, 255, 0.8);
+        box-shadow: 0 0px 5px 5px rgba(255, 255, 255, 0.8);
+    }
+    .row .card:hover .title-dead{
+        font-size: 35px;
+        top : 260px;
+        left :110px;
+    }
+    
+    .card:hover .dead{
+        font-size: 70px;
+        top:100px;
+        left:80px;
+    
+    }
+    .row .card .reward{
+        position: absolute;
+        background-color: rgba(255, 255, 255, 0.8);
+        color:black;
+        border-radius: 5px;
+        font-size: 2rem;
+        left : 10%;
+        top : 5%;
+        right : 10%px;
+        text-align : center;
+        box-shadow: 0 0px 5px 5px rgba(255, 255, 255, 0.8);
+    }
+}
+
+@media (max-width: 768px) { 
+    .carousel-control-next-icon,
+    .carousel-control-prev-icon{
+        height: 80px;
+        width: 30px;
+    }
+}
+
+
+@media (max-width: 1200px) {     
+    .gros{
+    font-size: 55px;
+    }
+    .moins-gros{
+    font-size: 30px;
+    }
+    
+}
+@media (max-width: 992px) { 
+   .gros{
+       font-size: 40px;
+   }
+   .moins-gros{
+       font-size: 20px;
+   }
+   .carousel-caption{
+       bottom : 30px;
+   }
 }
