--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     vertical-align: top;
 }
 .symboleoblique{
-    font-style: oblique -20deg
+    font-style: oblique -20deg;
 }
 .symboleelfe2{
     font-family: "tengwar";
@@ -330,7 +330,7 @@ footer li {
         font-size: 2rem;
         left : 10%;
         top : 5%;
-        right : 10%px;
+        right : 10%;
         text-align : center;
         box-shadow: 0 0px 5px 5px rgba(255, 255, 255, 0.8);
     }
